Bug 269070 - Crash at start [@ StatusBar::shortMessage]
Summary: Crash at start [@ StatusBar::shortMessage]
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/MP3tunes (other bugs)
Version First Reported In: 2.4.0.90
Platform: Debian unstable Linux
: NOR crash
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords: regression
: 269394 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-21 18:27 UTC by x545
Modified: 2011-05-26 12:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.00 KB, text/plain)
2011-03-25 01:34 UTC, theliv21
Details
New crash information added by DrKonqi (12.13 KB, text/plain)
2011-04-01 01:56 UTC, Matt Gibbs
Details
New crash information added by DrKonqi (8.90 KB, text/plain)
2011-04-03 13:19 UTC, Ionut Ciocirlan
Details
New crash information added by DrKonqi (2.77 KB, text/plain)
2011-05-26 12:22 UTC, Hamed Masafi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description x545 2011-03-21 18:27:29 UTC
Application: amarok (2.4.0.90)
KDE Platform Version: 4.5.3 (KDE 4.5.3)
Qt Version: 4.7.2
Operating System: Linux 2.6.38 x86_64
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:
Started Amarok, it always crashes while loading (before UI comes online).

Console output (ids shortened with xxx):
QObject::connect: Cannot connect Meta::MediaDeviceHandler::incrementProgress() to (null)::incrementProgress()
QObject::connect: Cannot connect Meta::MediaDeviceHandler::endProgressOperation(QObject*) to (null)::endProgressOperation(QObject*)
Device 0 (VID=22b8 and PID=41d6) is a Motorola Droid X.
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
LIBMTP PANIC: could not inspect object property descriptions!
Object::connect: No such signal Playlists::MediaDeviceUserPlaylistProvider::playlistSaved( const Playlists::MediaDevicePlaylistPtr &, const QString& )
Object::connect: No such signal Playlists::MediaDeviceUserPlaylistProvider::playlistRenamed( const Playlists::MediaDevicePlaylistPtr &)
Object::connect: No such signal Playlists::MediaDeviceUserPlaylistProvider::playlistsDeleted( const Playlists::MediaDevicePlaylistList & )
********************************************************************************************** 
** AMAROK WAS STARTED IN NORMAL MODE. IF YOU WANT TO SEE DEBUGGING INFORMATION, PLEASE USE: ** 
** amarok --debug                                                                           ** 
********************************************************************************************** 
HTTP GET  QUrl( "http://post.audioscrobbler.com:80/?hs=true&p=1.2.1&c=ark&v=2.4.0.90&u=x545&t=130xxxxxx&a=f840293a4xxxxxxxxx&api_key=402d3ca8e9bc9xxxxxxxxxxxxxx&sk=ed585e9cxxxxxxxxxxxxxxxxxx" )  
KCrash: Application 'amarok' crashing...
KCrash: Attempting to start /usr/lib/kde4/libexec/drkonqi from kdeinit
sock_file=/home/psi/.kde/socket-x545.csn.tu-chemnitz.de/kdeinit4__0

Debian package amarok 2.4.1~beta1-1

The crash can be reproduced every time.

-- Backtrace:
Application: Amarok (amarok), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fbc320a37a0 (LWP 21927))]

Thread 10 (Thread 0x7fbc0de84700 (LWP 21931)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:216
#1  0x00007fbc1269bfb1 in ?? () from /usr/lib/libxine.so.1
#2  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#3  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#4  0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7fbc0e685700 (LWP 21932)):
#0  0x00007fbc2e7045e3 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fbc283966c9 in g_main_context_poll (context=0x1bf2950, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /tmp/buildd/glib2.0-2.28.2/./glib/gmain.c:3404
#2  g_main_context_iterate (context=0x1bf2950, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at /tmp/buildd/glib2.0-2.28.2/./glib/gmain.c:3086
#3  0x00007fbc28396b1c in g_main_context_iteration (context=0x1bf2950, may_block=1) at /tmp/buildd/glib2.0-2.28.2/./glib/gmain.c:3154
#4  0x00007fbc2f07bde6 in QEventDispatcherGlib::processEvents (this=0x1b405c0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fbc2f050022 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fbc2f05026c in QEventLoop::exec (this=0x7fbc0e684cd0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007fbc2ef657d4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#8  0x00007fbc128f7e7e in Phonon::Xine::XineThread::run (this=0x1a51bb0) at ../../xine/xinethread.cpp:143
#9  0x00007fbc2ef68035 in QThreadPrivate::start (arg=0x1a51bb0) at thread/qthread_unix.cpp:320
#10 0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#11 0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#12 0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7fbc0f09e700 (LWP 21935)):
#0  0x00007fbc2e7045e3 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=333) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fbc0f0a38d5 in ?? () from /usr/lib/xine/plugins/1.29/xineplug_ao_out_alsa.so
#2  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#3  0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7fbc0d683700 (LWP 21936)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc126acb0b in ?? () from /usr/lib/libxine.so.1
#2  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#3  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#4  0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7fbc0ca7e700 (LWP 21937)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc126acb0b in ?? () from /usr/lib/libxine.so.1
#2  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#3  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#4  0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fbc07fff700 (LWP 21938)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc126acb0b in ?? () from /usr/lib/libxine.so.1
#2  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#3  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#4  0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fbc04c29700 (LWP 21940)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc2ef6871b in wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbc2cacde56 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2023cd0, th=0x20249d0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbc2cad06fb in ThreadWeaver::WorkingHardState::applyForWork (this=0x2024360, th=0x20249d0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbc2cacec7f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbc04c28d30, parent=0x2023cd0, th=0x20249d0) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007fbc2cacf1d8 in ThreadWeaver::Thread::run (this=0x20249d0) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007fbc2ef68035 in QThreadPrivate::start (arg=0x20249d0) at thread/qthread_unix.cpp:320
#8  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#9  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#10 0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fbc00b78700 (LWP 21941)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc2ef6871b in wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbc2cacde56 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2023cd0, th=0x2027880) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbc2cad06fb in ThreadWeaver::WorkingHardState::applyForWork (this=0x2024360, th=0x2027880) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbc2cacec7f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbc00b77d30, parent=0x2023cd0, th=0x2027880) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007fbc2cacf1d8 in ThreadWeaver::Thread::run (this=0x2027880) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007fbc2ef68035 in QThreadPrivate::start (arg=0x2027880) at thread/qthread_unix.cpp:320
#8  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#9  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#10 0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fbc00217700 (LWP 21942)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbc2ef6871b in wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:88
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x2024240, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:160
#3  0x00007fbc2cacde56 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2023cd0, th=0x2218e70) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#4  0x00007fbc2cad06fb in ThreadWeaver::WorkingHardState::applyForWork (this=0x2024360, th=0x2218e70) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#5  0x00007fbc2cacec7f in ThreadWeaver::ThreadRunHelper::run (this=0x7fbc00216d30, parent=0x2023cd0, th=0x2218e70) at ../../../threadweaver/Weaver/Thread.cpp:87
#6  0x00007fbc2cacf1d8 in ThreadWeaver::Thread::run (this=0x2218e70) at ../../../threadweaver/Weaver/Thread.cpp:142
#7  0x00007fbc2ef68035 in QThreadPrivate::start (arg=0x2218e70) at thread/qthread_unix.cpp:320
#8  0x00007fbc22e7d373 in ?? () from /usr/lib/libGL.so.1
#9  0x00007fbc2ac15b40 in start_thread (arg=<value optimized out>) at pthread_create.c:304
#10 0x00007fbc2e70f22d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fbc320a37a0 (LWP 21927)):
[KCrash Handler]
#6  StatusBar::shortMessage (this=0x0, text=...) at ../../src/statusbar/StatusBar.cpp:255
#7  0x00007fbc0283affa in Mp3tunesService::authenticate (this=<value optimized out>, uname=<value optimized out>, passwd=...) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:261
#8  0x00007fbc0283b603 in Mp3tunesService::Mp3tunesService (this=0x218c020, parent=<value optimized out>, name=<value optimized out>, token=<value optimized out>, email=..., password=..., harmonyEnabled=false) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:118
#9  0x00007fbc0283b97b in Mp3tunesServiceFactory::createService (this=0x216f940) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:63
#10 0x00007fbc0283e400 in Mp3tunesServiceFactory::init (this=0x216f940) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:47
#11 0x00007fbc30d2689c in ServicePluginManager::initFactory (this=0x2021580, factory=0x216f940) at ../../src/services/ServicePluginManager.cpp:114
#12 0x00007fbc30d29750 in ServicePluginManager::init (this=0x2021580, factories=<value optimized out>) at ../../src/services/ServicePluginManager.cpp:71
#13 0x00007fbc310825e4 in Plugins::PluginManager::init (this=0x1ab9c20) at ../../src/PluginManager.cpp:87
#14 0x00007fbc31083066 in Plugins::PluginManager::PluginManager (this=0x1ab9c20, parent=<value optimized out>) at ../../src/PluginManager.cpp:62
#15 0x00007fbc310831fa in Plugins::PluginManager::instance () at ../../src/PluginManager.cpp:41
#16 0x00007fbc310669c5 in pluginManager (this=0x1c05100) at ../../src/PluginManager.h:76
#17 MainWindow::MainWindow (this=0x1c05100) at ../../src/MainWindow.cpp:145
#18 0x00007fbc310211b9 in App::continueInit (this=0x7fffa08ebe60) at ../../src/App.cpp:612
#19 0x00007fbc31022add in App::App (this=0x7fffa08ebe60) at ../../src/App.cpp:208
#20 0x0000000000409860 in main (argc=1, argv=0x7fffa08ee468) at ../../src/main.cpp:286

Reported using DrKonqi
Comment 1 Myriam Schweingruber 2011-03-22 08:10:45 UTC
Could you please erase the 3 amarok configuration files located in $HOME/.kde/share/config/ and try again?
Comment 2 theliv21 2011-03-25 01:34:05 UTC
Created attachment 58316 [details]
New crash information added by DrKonqi

amarok (2.4.0.90) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.0

- What I was doing when the application crashed:
I was just trying to start up Amarok and it would immediately crash prior to opening.

-- Backtrace (Reduced):
#6  StatusBar::shortMessage (this=0x0, text=...) at ../../src/statusbar/StatusBar.cpp:255
#7  0x00007f61434498e6 in Mp3tunesService::authenticate (this=<value optimized out>, uname=<value optimized out>, passwd=...) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:261
#8  0x00007f614344e034 in Mp3tunesService::Mp3tunesService (this=0x13028b0, parent=<value optimized out>, name=<value optimized out>, token=<value optimized out>, email=..., password=..., harmonyEnabled=false) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:118
#9  0x00007f614344e12b in Mp3tunesServiceFactory::createService (this=0x12235d0) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:63
#10 0x00007f614344e200 in Mp3tunesServiceFactory::init (this=0x12235d0) at ../../../../src/services/mp3tunes/Mp3tunesService.cpp:47
Comment 3 Myriam Schweingruber 2011-03-26 09:56:01 UTC
*** Bug 269394 has been marked as a duplicate of this bug. ***
Comment 4 Myriam Schweingruber 2011-03-26 09:56:50 UTC
Please, all reporters, check comment # and give feedback.
Comment 5 theliv21 2011-03-26 14:37:51 UTC
I tried this and it fixed the issue. I am now able to open Amarok. Thank you!(In reply to comment #1)
> Could you please erase the 3 amarok configuration files located in
> $HOME/.kde/share/config/ and try again?
Comment 6 Matt Gibbs 2011-04-01 01:56:39 UTC
Created attachment 58487 [details]
New crash information added by DrKonqi

amarok (2.4.0.90) on KDE Platform 4.6.1 (4.6.1) "release 390" using Qt 4.7.2

I disabled the mp3tunes plugin in the amarok configuration file and then it started - crash seems to be related to that plugin.

-- Backtrace (Reduced):
#6  StatusBar::shortMessage (this=0x0, text=...) at /usr/src/debug/amarok-2.4.0.90/src/statusbar/StatusBar.cpp:255
#7  0x00007fcb926bd8fa in Mp3tunesService::authenticate (this=<value optimized out>, uname=<value optimized out>, passwd=...) at /usr/src/debug/amarok-2.4.0.90/src/services/mp3tunes/Mp3tunesService.cpp:261
#8  0x00007fcb926bdf03 in Mp3tunesService::Mp3tunesService (this=0x17c6f00, parent=<value optimized out>, name=<value optimized out>, token=<value optimized out>, email=..., password=..., harmonyEnabled=false) at /usr/src/debug/amarok-2.4.0.90/src/services/mp3tunes/Mp3tunesService.cpp:118
#9  0x00007fcb926be27b in Mp3tunesServiceFactory::createService (this=0x173a170) at /usr/src/debug/amarok-2.4.0.90/src/services/mp3tunes/Mp3tunesService.cpp:63
#10 0x00007fcb926c0d00 in Mp3tunesServiceFactory::init (this=0x173a170) at /usr/src/debug/amarok-2.4.0.90/src/services/mp3tunes/Mp3tunesService.cpp:47
Comment 7 x545 2011-04-01 10:35:46 UTC
(In reply to comment #6)
> I disabled the mp3tunes plugin in the amarok configuration file and then it
> started - crash seems to be related to that plugin.
yes, worked, thx, sry for delay
Comment 8 Myriam Schweingruber 2011-04-01 20:27:28 UTC
Thank you for the feedback. The problem is a left over configuration from the previous version apparently, so we will have a closer look at that.
Comment 9 Ionut Ciocirlan 2011-04-03 13:19:36 UTC
Created attachment 58535 [details]
New crash information added by DrKonqi

amarok (2.4.0.90) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.2

Amarok crashes on startup. I removed all config files except for amarokrc, and deleted all sections except for [Collection Folders] and [MySQL], but it still crashes.
Removing amarokrc as well fixes it.

-- Backtrace (Reduced):
#6  Plugins::PluginManager::init (this=0x7f0910168f20) at ../../src/PluginManager.cpp:93
#7  0x0000003ef17ee066 in Plugins::PluginManager::PluginManager (this=0x7f0910168f20, parent=<value optimized out>) at ../../src/PluginManager.cpp:62
#8  0x0000003ef17ee1fa in Plugins::PluginManager::instance () at ../../src/PluginManager.cpp:41
#9  0x0000003ef17d19c5 in pluginManager (this=0x7f09101684e0) at ../../src/PluginManager.h:76
#10 MainWindow::MainWindow (this=0x7f09101684e0) at ../../src/MainWindow.cpp:145
Comment 10 Myriam Schweingruber 2011-04-11 21:04:28 UTC
Fixed by commit rv2.4.0.90-55-gf314063
Comment 11 Ralf Engels 2011-05-02 01:44:40 UTC
Git commit 251e7f41d88720b85df16f875f380ce1aa53b8aa by Ralf Engels.
Committed on 11/04/2011 at 18:24.
Pushed by rengels into branch 'dynamicplaylist'.

Fix Crash at start [@ StatusBar::shortMessage]

BUG: 269070

M  +9    -6    src/MainWindow.cpp     
M  +1    -0    src/core-impl/collections/audiocd/AudioCdCollection.cpp     
M  +1    -0    src/core-impl/podcasts/sql/SqlPodcastProvider.cpp     
M  +1    -0    src/services/lastfm/meta/MultiPlayableCapabilityImpl_p.h     
M  +22   -19   src/statusbar/StatusBar.cpp     
M  +14   -4    src/statusbar/StatusBar.h     

http://commits.kde.org/amarok/251e7f41d88720b85df16f875f380ce1aa53b8aa
Comment 12 Hamed Masafi 2011-05-26 12:22:33 UTC
Created attachment 60347 [details]
New crash information added by DrKonqi

amarok (2.4.1) on KDE Platform 4.6.2 (4.6.2) using Qt 4.7.2

amarok crach in startup(every time) after showing splash screen

-- Backtrace (Reduced):
#7  0xb6faaf18 in Plugins::PluginManager::init() () from /usr/lib/libamaroklib.so.1
#8  0xb6faba91 in Plugins::PluginManager::PluginManager(QObject*) () from /usr/lib/libamaroklib.so.1
#9  0xb6fabc6e in Plugins::PluginManager::instance() () from /usr/lib/libamaroklib.so.1
#10 0xb6f8dae3 in MainWindow::MainWindow() () from /usr/lib/libamaroklib.so.1
#11 0xb6f5fb86 in App::continueInit() () from /usr/lib/libamaroklib.so.1