Fix Crash at start [@ StatusBar::shortMessage]

BUG: 269070